io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/finalize/C.java
package io.hotmoka.examples.errors.finalize;

public class C {

	@Override
	protected void finalize() {} // illegal in Takamaka
}